--- a/app/src/main/res/layout/login_fragment.xml
+++ b/app/src/main/res/layout/login_fragment.xml
@@ -46,6 +46,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="@string/enter_email"
+                    android:backgroundTint="@color/white_smoke"
                     android:textSize="15sp"
                     android:textColor="@color/black"
                     android:background="@drawable/edittextshape"
@@ -61,6 +62,7 @@
                 <EditText
                     android:textColor="@color/black"
                     android:layout_width="match_parent"
+                    android:backgroundTint="@color/white_smoke"
                     android:layout_height="wrap_content"
                     android:hint="@string/enter_password"
                     android:background="@drawable/edittextshape"
