--- a/app/src/main/res/layout/picture_fragment.xml
+++ b/app/src/main/res/layout/picture_fragment.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:padding="15dp">
 
     <ImageView
@@ -41,25 +41,32 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
+        android:padding="5dp"
         android:layout_marginBottom="20dp"
         android:backgroundTint="@android:color/transparent">
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:backgroundTint="@color/black"
+            android:backgroundTint="@color/white"
             android:layout_marginEnd="20dp"
             android:src="@drawable/take_a_photo"
-            android:tintMode="@color/white"
+            android:tint="@color/orange"
+            app:borderWidth="0dp"
+            android:layout_marginTop="7dp"
+            android:layout_marginBottom="7dp"
             android:id="@+id/camera_btn" />
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/album_btn"
             android:rotationY="180"
-            android:tintMode="@color/white"
+            app:borderWidth="0dp"
+            android:layout_marginTop="7dp"
+            android:layout_marginBottom="7dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
-            android:backgroundTint="@color/black"
+            android:backgroundTint="@color/white"
+            android:tint="@color/orange"
             android:src="@drawable/add_photo" />
 
     </LinearLayout>
@@ -74,7 +81,7 @@
         android:background="@drawable/buttonshape"
         android:layout_marginRight="60dp"
         android:layout_marginLeft="50dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="0dp"
         android:layout_marginBottom="10dp"
         android:text="@string/save_pic"/>
     </LinearLayout>
