--- a/app/src/main/res/layout/course_fragment.xml
+++ b/app/src/main/res/layout/course_fragment.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="@drawable/background"
     android:id="@+id/course_nsv">
 
     <androidx.appcompat.widget.Toolbar
@@ -13,17 +15,17 @@
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
         android:theme="@style/ThemeOverlay.AppCompat.Dark" />
-
     <TextView
+        android:textSize="20sp"
+        android:textColor="@color/white"
+        android:textStyle="bold"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/course_title"
-        android:background="@color/black"
-        android:textColor="@color/white"
-        android:layout_below="@+id/curse_toolbar"
         android:gravity="center"
-        android:text="ddddddddddddddd"
-        android:textSize="20sp"/>
+        android:layout_below="@+id/curse_toolbar"
+        android:id="@+id/course_title"
+        android:background="@color/black"/>
+
     <ImageView
         android:background="@color/black"
         android:layout_width="match_parent"
@@ -32,14 +34,20 @@
         android:id="@+id/course_image_iv"/>
 
     <ExpandableListView
+        android:layout_marginTop="10dp"
         android:id="@+id/subject_elv"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:dividerHeight="0.5dp"
+        android:dividerHeight="10dp"
         android:layout_below="@+id/course_image_iv"
+        android:groupIndicator="@drawable/indicator_custome"
+        android:divider="@android:color/transparent"
+        android:childDivider="@android:color/transparent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+
 
 </RelativeLayout>
