--- a/app/src/main/res/layout/user_cell.xml
+++ b/app/src/main/res/layout/user_cell.xml
@@ -32,6 +32,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/username_tv"
+            android:textStyle="bold"
             android:layout_marginTop="15dp"
             android:layout_marginStart="12dp"
             android:textColor="@color/black"
