--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,5 +10,5 @@
     <color name="white">#FFFFFFFF</color>
     <color name="orange">#EC5151</color>
     <color name="white_smoke">#F5F5F5</color>
-    <color name="orange2">#CC2A2A</color>
+    <color name="orange2">#A30C0C</color>
 </resources>
