--- a/app/src/main/res/layout/chat_fragment.xml
+++ b/app/src/main/res/layout/chat_fragment.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/gray"
+    android:background="@color/white_smoke"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
     <androidx.appcompat.widget.Toolbar
@@ -19,9 +19,14 @@
         android:layout_height="wrap_content"
         android:background="@color/orange"
         android:id="@+id/chat_tl"
-        app:tabSelectedTextColor="@color/white"
-        app:tabIndicatorColor="@color/black"
-        app:tabTextColor="@color/white"/>
+        app:tabSelectedTextColor="@color/white_smoke"
+        app:tabIndicatorColor="@color/white_smoke"
+        app:tabTextColor="@color/orange2"/>
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1.5dp"
+        android:background="@color/orange"
+        android:layout_alignParentBottom="true"/>
 
     <androidx.viewpager.widget.ViewPager
         android:layout_width="wrap_content"
