--- a/app/src/main/res/layout/register_fragment.xml
+++ b/app/src/main/res/layout/register_fragment.xml
@@ -36,8 +36,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:layout_marginTop="5dp"
-            android:layout_marginBottom="5dp"
+            android:layout_marginTop="3dp"
+            android:layout_marginBottom="3dp"
             android:layout_gravity="center"
             android:paddingTop="5dp">
             <com.google.android.material.floatingactionbutton.FloatingActionButton
@@ -51,16 +51,14 @@
                 app:fabSize="mini"
                 app:borderWidth="0dp"
                 android:textStyle="bold"
-                android:src="@drawable/ic_baseline_add_24"
-               />
+                android:src="@drawable/ic_baseline_add_24" />
             <com.google.android.material.imageview.ShapeableImageView
                 android:layout_width="120dp"
                 android:layout_height="120dp"
                 app:srcCompat="@mipmap/ic_launcher"
                 android:layout_margin="10dp"
                 app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize50Percent"
-                android:id="@+id/user_image"
-                />
+                android:id="@+id/user_image" />
         </RelativeLayout>
         <ScrollView
             android:layout_width="match_parent"
@@ -73,8 +71,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/name"
-                    android:textColor="#EC5151"
-                    android:layout_marginTop="20dp"/>
+                    android:textColor="@color/orange"
+                    android:layout_marginTop="10dp"/>
                 <EditText
                     android:textColor="@color/black"
                     android:layout_width="match_parent"
@@ -90,8 +88,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/email"
-                    android:textColor="#EC5151"
-                    android:layout_marginTop="20dp"/>
+                    android:textColor="@color/orange"
+                    android:layout_marginTop="10dp"/>
                 <EditText
                     android:textColor="@color/black"
                     android:layout_width="match_parent"
@@ -107,8 +105,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/password"
-                    android:textColor="#EC5151"
-                    android:layout_marginTop="20dp"/>
+                    android:textColor="@color/orange"
+                    android:layout_marginTop="10dp"/>
                 <EditText
                     android:textColor="@color/black"
                     android:layout_width="match_parent"
@@ -123,9 +121,9 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="20dp"
+                    android:layout_marginTop="10dp"
                     android:text="@string/confirm_password"
-                    android:textColor="#EC5151" />
+                    android:textColor="@color/orange" />
                 <EditText
                     android:textColor="@color/black"
                     android:layout_width="match_parent"
@@ -137,47 +135,52 @@
                     android:backgroundTint="@color/white_smoke"
                     android:id="@+id/confirmPassword_input"/>
 
-            </LinearLayout>
-        </ScrollView>
-        <RelativeLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
-                android:text="@string/country"
-                android:id="@+id/country_tv"
-                android:textColor="#EC5151" />
-
-            <EditText
-                android:layout_toStartOf="@+id/gps_btn"
-                android:layout_marginEnd="12dp"
-                android:layout_below="@+id/country_tv"
-                android:textColor="@color/black"
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="@string/country_hint"
-                android:background="@drawable/edittextshape"
+                android:orientation="horizontal"
+                android:layout_marginTop="10dp">
+                <RelativeLayout
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:layout_marginEnd="3dp">
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/country"
+                        android:id="@+id/country_tv"
+                        android:textColor="@color/orange" />
 
-                android:textSize="13sp"
-                android:backgroundTint="@color/white_smoke"
-                android:id="@+id/country_input"/>
+                    <EditText
+                        android:layout_below="@+id/country_tv"
+                        android:textColor="@color/black"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:hint="@string/country_hint"
+                        android:background="@drawable/edittextshape"
+                        android:textSize="13sp"
+                        android:backgroundTint="@color/white_smoke"
+                        android:id="@+id/country_input"/>
+                </RelativeLayout>
 
-            <Button
-                android:layout_marginEnd="12dp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@drawable/buttonshape"
-                android:textColor="@color/white"
-                android:text="@string/gps"
-                android:layout_gravity="center_horizontal"
-                android:layout_marginTop="20dp"
-                android:id="@+id/gps_btn"
-                android:layout_alignParentEnd="true"
-                android:textAllCaps="false"/>
-        </RelativeLayout>
+                    <Button
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:layout_marginEnd="3dp"
+                        android:background="@drawable/buttonshape"
+                        android:textColor="@color/white"
+                        android:text="@string/gps"
+                        android:layout_gravity="center_horizontal"
+                        android:id="@+id/gps_btn"
+                        android:layout_alignParentEnd="true"
+                        android:textAllCaps="false"/>
+            </LinearLayout>
 
+
+            </LinearLayout>
+        </ScrollView>
 
         <Button
             android:layout_width="wrap_content"
