--- a/app/src/main/res/layout/chat_sender_cell.xml
+++ b/app/src/main/res/layout/chat_sender_cell.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="100dp"
+    android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="horizontal">
     <RelativeLayout
@@ -19,12 +19,14 @@
         android:layout_margin="10dp"
         app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize50Percent" />
     <com.google.android.material.textview.MaterialTextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:id="@+id/sender_text"
         android:gravity="center"
         android:background="@drawable/chat_sender"
         android:textColor="@color/black"
+        android:layout_marginTop="10dp"
+        android:padding="10dp"
         android:layout_toRightOf="@+id/sender_image"/>
     </RelativeLayout>
 </androidx.cardview.widget.CardView>
