--- a/app/src/main/res/drawable/chat_receiver.xml
+++ b/app/src/main/res/drawable/chat_receiver.xml
@@ -4,5 +4,5 @@
     <corners
         android:radius="30dp"
         android:topRightRadius="0dp"/>
-    <solid android:color="#009688"/>
+    <solid android:color="@color/orange"/>
 </shape>
